documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

L13W32API BOOL __stdcall L13_FileRead(LPVOID handle,LPVOID buffer,USHORT count);

L13W32API BOOL __stdcall L13_FileSeek(LPVOID handle,ULONG offset);

L13W32API ULONG __stdcall L13_FileTell(LPVOID handle);

L13W32API BOOL __stdcall L13_FileWrite(LPVOID handle,LPVOID buffer,USHORT count);

L13W32API USHORT __stdcall L13_GetHigh(ULONG val);

L13W32API USHORT __stdcall L13_GetLow(ULONG val);

L13W32API USHORT __stdcall L13_GlobalRdW(USHORT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_GlobalWrW(USHORT value,USHORT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_HandleClose(HCARD handleval);

L13W32API ERRVAL __stdcall L13_HandleDel(HCARD handleval);

L13W32API ERRVAL __stdcall L13_HandleGet(LPSTR cardstr,LPINT cardnum,LPINT devnum,LPULONG sizval,HCARD handleval);

L13W32API HCARD __stdcall L13_HandleIns(LPCSTR cardname,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);

L13W32API BOOL __stdcall L13_HandleOkay(HCARD handleval);

L13W32API ERRVAL __stdcall L13_HandleOpen(LPCSTR cardname,INT cardnum,HCARD handleval);

L13W32API ERRVAL __stdcall L13_HandleOpenWin95(LPCSTR cardname,INT cardnum,HCARD handleval);

L13W32API ERRVAL __stdcall L13_HandleOpenWinNT(LPCSTR cardname,INT cardnum,HCARD handleval);

L13W32API ERRVAL __stdcall L13_HandleVer(HCARD handleval);

L13W32API ERRVAL __stdcall L13_HandleVerPLX(HCARD handleval);

L13W32API ULONG __stdcall L13_HeapAlloc(ULONG wordcount,HCARD handleval);

L13W32API ULONG __stdcall L13_HeapAllocAll(LPULONG wordcount,HCARD handleval);

L13W32API ULONG __stdcall L13_HeapAllocAllDPM(LPUSHORT wordcount,HCARD handleval);

L13W32API ULONG __stdcall L13_HeapAllocDPM(USHORT wordcount,HCARD handleval);

L13W32API ULONG __stdcall L13_HeapAllocEx(USHORT configval,ULONG wordcount,HCARD handleval);

L13W32API ULONG __stdcall L13_HeapWipe(HCARD handleval);

L13W32API ULONG __stdcall L13_HeapWipeDPM(HCARD handleval);

L13W32API USHORT __stdcall L13_IndirectRd(INT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_IndirectWr(USHORT value,INT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_IntClear(HCARD handleval);

L13W32API ERRVAL __stdcall L13_IntDisable(HCARD handleval);

L13W32API ERRVAL __stdcall L13_IntEnable(HCARD handleval);

L13W32API ERRVAL __stdcall L13_IntEnableCond(HCARD handleval);

L13W32API LPVOID __stdcall L13_IntGet(HCARD handleval);

L13W32API ERRVAL __stdcall L13_IntInstall(LPVOID hEvent,HCARD handleval);

L13W32API ULONG __stdcall L13_IntRd(LPUSHORT typeval,LPUSHORT infoval,HCARD handleval);

L13W32API VOID __stdcall L13_IntReset(HCARD handleval);

L13W32API INT __stdcall L13_IntStatus(HCARD handleval);

L13W32API ERRVAL __stdcall L13_IntUninstall(HCARD handleval);

L13W32API USHORT __stdcall L13_IORdW(INT addrval,HCARD handleval);

L13W32API USHORT __stdcall L13_IOWINRdW(USHORT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_IOWINWrW(USHORT value,USHORT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_IOWrW(USHORT value,INT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernBegin(LPVOID *vxdptr,LPSTR cardstr,LPCSTR cardname,INT busnum,INT devnum,INT funcnum);

L13W32API ERRVAL __stdcall L13_KernDev(LPINT valueptr,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernEnd(LPVOID vxdptr);

L13W32API ERRVAL __stdcall L13_KernIntClear(HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernIntInstall(LPVOID hEvent,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernIntParam(ULONG clraddr,ULONG clrwidth,ULONG clrvalue,ULONG stataddr,ULONG statwidth,ULONG statvalue,ULONG statmask,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernIntStatus(LPINT valueptr,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernIntUninstall(HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernIORdW(LPUSHORT valueptr,INT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernIOWrW(USHORT value,INT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_KernMEMFillW(USHORT value,INT addrval,INT countval,INT bustype,HCARD handleval);