documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32NET.CS

        [DllImport("L13W32.DLL", EntryPoint = "_L13_FileRead@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_FileRead(IntPtr handle, IntPtr buffer, UInt16 count);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_FileSeek@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_FileSeek(IntPtr handle, UInt32 offset);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_FileTell@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_FileTell(IntPtr handle);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_FileWrite@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_FileWrite(IntPtr handle, IntPtr buffer, UInt16 count);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_GetHigh@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_GetHigh(UInt32 val);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_GetLow@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_GetLow(UInt32 val);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_GlobalRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_GlobalRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_GlobalWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_GlobalWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HandleClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_HandleClose(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HandleDel@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_HandleDel(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HandleGet@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_HandleGet(ref string cardstr, ref Int32 cardnum, ref Int32 devnum, ref UInt32 sizval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HandleIns@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_HandleIns(ref string cardname, Int32 cardnum, IntPtr happwnd, UInt16 uiremovalmsg);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HandleOkay@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_HandleOkay(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HandleOpen@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_HandleOpen(ref string cardname, Int32 cardnum, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HandleOpenWin95@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_HandleOpenWin95(ref string cardname, Int32 cardnum, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HandleOpenWinNT@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_HandleOpenWinNT(ref string cardname, Int32 cardnum, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HandleVer@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_HandleVer(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HandleVerPLX@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_HandleVerPLX(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HeapAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_HeapAlloc(UInt32 wordcount, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HeapAllocAll@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_HeapAllocAll(ref UInt32 wordcount, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HeapAllocAllDPM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_HeapAllocAllDPM(ref UInt16 wordcount, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HeapAllocDPM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_HeapAllocDPM(UInt16 wordcount, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HeapAllocEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_HeapAllocEx(UInt16 configval, UInt32 wordcount, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HeapWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_HeapWipe(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_HeapWipeDPM@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_HeapWipeDPM(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IndirectRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_IndirectRd(Int32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IndirectWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_IndirectWr(UInt16 value, Int32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IntClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_IntClear(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IntDisable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_IntDisable(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IntEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_IntEnable(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IntEnableCond@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_IntEnableCond(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IntGet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* L13_IntGet(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IntInstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_IntInstall(IntPtr hevent, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IntRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_IntRd(ref UInt16 typevalval, ref UInt16 infoval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IntReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_IntReset(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IntStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_IntStatus(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IntUninstall@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_IntUninstall(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IORdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_IORdW(Int32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IOWINRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_IOWINRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IOWINWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_IOWINWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IOWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_IOWrW(UInt16 value, Int32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_KernBegin@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        unsafe public static extern Int32 L13_KernBegin(IntPtr* vxdptr, ref string cardstr, ref string cardname, Int32 busnum, Int32 devnum, Int32 funcnum);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_KernDev@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_KernDev(ref Int32 valueptr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_KernEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_KernEnd(IntPtr vxdptr);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_KernIntClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_KernIntClear(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_KernIntInstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_KernIntInstall(IntPtr hevent, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_KernIntParam@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_KernIntParam(UInt32 clraddr, UInt32 clrwidth, UInt32 clrvalue, UInt32 stataddr, UInt32 statwidth, UInt32 statvalue, UInt32 statmask, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_KernIntStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_KernIntStatus(ref Int32 valueptr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_KernIntUninstall@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_KernIntUninstall(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_KernIORdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_KernIORdW(ref UInt16 valueptr, Int32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_KernIOWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_KernIOWrW(UInt16 value, Int32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_KernMEMFillW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_KernMEMFillW(UInt16 value, Int32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
